ui: Fix the citations label in the citation summary graph
* Moved the citations label in the citation summary graph so it doesn't overlap
* INSPIR-2452

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -24,7 +24,9 @@
 
     // :fist-child to avoid setting padding for `UserFeedback`
     & > *:first-child:not(.__Jobs__) {
-      padding: 0 2.85rem;
+      @media (min-width: $screen-xs-max) {
+        padding: 0 2.85rem;
+      }
     }
 
     @media (max-width: $screen-xs-max) {
